--- a/snake/raise/main.html
+++ b/snake/raise/main.html
@@ -1,33 +1,62 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>뱀키우기 게임</title>
-  <link rel="stylesheet" href="../../common/common.css" />
-  <style>
-    canvas {
-      border: 1px solid #333;
-      background-color: #f0f0f0;
-      display: block;
-      margin: 0 auto;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>뱀키우기 게임</title>
+    <link rel="stylesheet" href="../../common/common.css"/>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #222;
+        }
+
+        #gameContainer {
+            width: 400px;
+        }
+
+        /* 오버레이를 캔버스 위에 별도로 배치 */
+        #overlay {
+            text-align: center;
+            font-size: 16px;
+            background: rgba(0, 0, 0, 0.8);
+            color: #fff;
+            padding: 5px 0;
+        }
+
+        #overlay select {
+            font-size: 16px;
+        }
+
+        canvas {
+            border: 1px solid #333;
+            background-color: #f0f0f0;
+            display: block;
+        }
+    </style>
 </head>
 <body>
-<div id="score">Score: 0</div>
-<div id="controls">
-  <label for="difficulty">난이도:</label>
-  <select id="difficulty">
-    <option value="500">매우 쉬움</option>
-    <option value="150">쉬움</option>
-    <option value="100" selected>보통</option>
-    <option value="50">어려움</option>
-  </select>
+<div id="gameContainer">
+    <div id="overlay">
+        Score: <span id="score">0</span> | 난이도:
+        <label for="difficulty"></label>
+        <select id="difficulty">
+            <option value="150">Easy</option>
+            <option value="100" selected>Normal</option>
+            <option value="50">Hard</option>
+        </select>
+    </div>
+    <canvas id="gameCanvas" width="400" height="400"></canvas>
 </div>
-<canvas id="gameCanvas" width="400" height="400"></canvas>
 <script src="js/app.js"></script>
 <footer>
-  <a href="../../index.html">목록으로 돌아가기</a>
+    <a href="../../index.html">목록으로 돌아가기</a>
 </footer>
 </body>
 </html>
