뱀키우기 화면 스타일 변경

--- a/snake/raise/main.html
+++ b/snake/raise/main.html
@@ -9,19 +9,16 @@
             height: 100%;
             margin: 0;
         }
-
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             background-color: #222;
         }
-
         #gameContainer {
             width: 400px;
         }
-
-        /* 오버레이를 캔버스 위에 별도로 배치 */
+        /* 오버레이 UI: 캔버스 위쪽에 별도의 영역으로 배치 */
         #overlay {
             text-align: center;
             font-size: 16px;
@@ -29,11 +26,9 @@
             color: #fff;
             padding: 5px 0;
         }
-
         #overlay select {
             font-size: 16px;
         }
-
         canvas {
             border: 1px solid #333;
             background-color: #f0f0f0;
